8031968: Mac OS X: VM starts the agent by calling both Agent_OnAttach and Agent_OnAttach_L functions if its agent library is dynamically linked

Make sure we only look for statically linked agents in the main process image

Reviewed-by: dsamersoff, bpittore, dcubed